# rknn_ros2

./: README.md  package.xml  setup.cfg  setup.py
rknn_ros2/: list.txt  rknn_ros_test.py
