<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rknn_ros2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="orangepi@todo.todo">orangepi</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>OpenCV</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
    <!-- Python依赖项 -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-time</exec_depend>
  
  <!-- RKNNLite是第三方库，需要特殊声明 -->
  <exec_depend>rknn-toolkit2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
